third_party/WebKit/Source/core/layout/ng/ng_layout_result.cc
@@ -24,6 +24,7 @@ NGLayoutResult::NGLayoutResult(
     EBreakBetween initial_break_before,
     EBreakBetween final_break_after,
     bool has_forced_break,
+    bool is_pushed_by_floats,
     NGLayoutResultStatus status)
     : physical_fragment_(std::move(physical_fragment)),
       exclusion_space_(std::move(exclusion_space)),
@@ -34,6 +35,7 @@ NGLayoutResult::NGLayoutResult(
       initial_break_before_(initial_break_before),
       final_break_after_(final_break_after),
       has_forced_break_(has_forced_break),
+      is_pushed_by_floats_(is_pushed_by_floats),
       status_(status) {
   oof_positioned_descendants_.swap(oof_positioned_descendants);
   positioned_floats_.swap(positioned_floats);
@@ -57,7 +59,7 @@ scoped_refptr<NGLayoutResult> NGLayoutResult::CloneWithoutOffset() const {
       positioned_floats, unpositioned_floats, std::move(exclusion_space),
       bfc_offset_, end_margin_strut_, intrinsic_block_size_,
       minimal_space_shortage_, initial_break_before_, final_break_after_,
-      has_forced_break_, Status()));
+      has_forced_break_, is_pushed_by_floats_, Status()));
 }
 
 }  // namespace blink
